--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="/reset.css">
   <link rel="stylesheet" href="/layout.css">
   <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/drawer.css">
 </head>
 
 <body>
