--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,7 +13,7 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css"
     rel="stylesheet" />
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet" />
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/eggfavicon.ico">
   <link rel="stylesheet" href="/reset.css">
   <link rel="stylesheet" href="/layout.css">
   <link rel="stylesheet" href="/styles.css">
