meta tags added

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>eggDrop</title>
+  <meta property="og:title" content="eggDROP" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Send your friends a scavenger hunt!" />
+  <meta property="og:url" content="https://egg-drop.herokuapp.com" />
+  <meta property="og:image"
+    content="https://github.com/mpowers1113/eggDropFinal/blob/master/egg-drop-preview-img.png" />
+  <title>eggDROP</title>
   <script src="https://kit.fontawesome.com/c79889d4d5.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://unpkg.com/react-spring-bottom-sheet/dist/style.css" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
