--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="eggDROP" />
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Send your friends a scavenger hunt!" />
+  <meta property="og:description"
+    content="Snap a picture and hide your 'egg' anywhere on the map! Your friends can claim your egg if they're within 300feet of that location." />
   <meta property="og:url" content="https://egg-drop.herokuapp.com" />
-  <meta property="og:image"
-    content="https://github.com/mpowers1113/eggDropFinal/blob/master/egg-drop-preview-img.png" />
+  <meta property="og:image" content="https://egg-drop.herokuapp.com/images/egg-drop-preview-img.png" />
   <title>eggDROP</title>
   <script src="https://kit.fontawesome.com/c79889d4d5.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://unpkg.com/react-spring-bottom-sheet/dist/style.css" crossorigin="anonymous">
